first-deploy/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: { }
      containers:
        - name: logoutput
          image: melinadevops/log_output
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: logserver
          image: melinadevops/logserver
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
