first-deploy/log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-pong-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2425
